# micrORM

./: .gitignore  README.md  examples.py  main.py  models.py  pyproject.toml
example_project/: database.py  db.py  main.py  models.py
src/microrm/: __init__.py  models.py
